--- a/PlantVSZombie/PlantVSZombie.vcxproj.filters
+++ b/PlantVSZombie/PlantVSZombie.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="..\Condition_EnemyInLane.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="..\Condition_shooting.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Behaviour.hpp">
@@ -81,6 +84,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="..\Condition_EnemyInLane.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Condition_shooting.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
