[ADD] Reload, shoot, and life, and score, and destruction of plants

--- a/PlantVSZombie/PlantVSZombie.vcxproj.filters
+++ b/PlantVSZombie/PlantVSZombie.vcxproj.filters
@@ -45,7 +45,13 @@
     <ClCompile Include="..\Condition_EnemyInLane.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="..\Condition_shooting.cpp">
+    <ClCompile Include="..\Condition_Reaload.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ReloadAction.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Condition_CanShoot.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
@@ -86,8 +92,19 @@
     <ClInclude Include="..\Condition_EnemyInLane.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="..\Condition_shooting.h">
+    <ClInclude Include="..\Condition_Reload.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="..\ReloadAction.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Condition_CanShoot.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="..\Hack-Regular.ttf">
+      <Filter>Fichiers de ressources</Filter>
+    </Font>
   </ItemGroup>
 </Project>
