--- a/PlantVSZombie/PlantVSZombie.vcxproj
+++ b/PlantVSZombie/PlantVSZombie.vcxproj
@@ -132,14 +132,16 @@
   <ItemGroup>
     <ClCompile Include="..\addProjectileAction.cpp" />
     <ClCompile Include="..\Behaviour.cpp" />
+    <ClCompile Include="..\Condition_CanShoot.cpp" />
     <ClCompile Include="..\Condition_EnemyInLane.cpp" />
-    <ClCompile Include="..\Condition_shooting.cpp" />
+    <ClCompile Include="..\Condition_Reaload.cpp" />
     <ClCompile Include="..\DoNothing.cpp" />
     <ClCompile Include="..\Enemy.cpp" />
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\Plant.cpp" />
     <ClCompile Include="..\Playground.cpp" />
     <ClCompile Include="..\Projectile.cpp" />
+    <ClCompile Include="..\ReloadAction.cpp" />
     <ClCompile Include="..\Transition.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -147,15 +149,20 @@
     <ClInclude Include="..\addProjectileAction.h" />
     <ClInclude Include="..\Behaviour.hpp" />
     <ClInclude Include="..\Condition.hpp" />
+    <ClInclude Include="..\Condition_CanShoot.h" />
     <ClInclude Include="..\Condition_EnemyInLane.h" />
-    <ClInclude Include="..\Condition_shooting.h" />
+    <ClInclude Include="..\Condition_Reload.h" />
     <ClInclude Include="..\Context.hpp" />
     <ClInclude Include="..\DoNothing.h" />
     <ClInclude Include="..\Enemy.h" />
     <ClInclude Include="..\Plant.hpp" />
     <ClInclude Include="..\Playground.h" />
     <ClInclude Include="..\Projectile.h" />
+    <ClInclude Include="..\ReloadAction.h" />
     <ClInclude Include="..\Transition.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="..\Hack-Regular.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
